# mossy

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  package.json  requirements.txt  structure.txt
backend/: backgrounder.py  entrypoint.sh  env.py  main.py  pyproject.toml  pytest.ini  supervisord.conf
backend/alembic/: env.py
backend/alembic/versions/: 02c79bd0f821_dev.py  0a6c6a80b727_add_table.py  460ee9251587_dev.py  55d5621cc1e9_dev.py  5bb72258ff92_dev.py  646cc544a4c3_dev.py  6f6e91647cda_dev.py  7243eb84b778_dev.py  934f6ca3ce64_init.py  9f482c4e2fad_init.py  bdae9680190d_dev.py  ce66901b65e9_dev.py  cf102c392675_dev.py  d04632c9d235_dev.py  dd7db6634529_dev.py
backend/routers/api/: router.py
backend/routers/api/authentication/: endpoint.py
backend/routers/api/m1/: __init__.py
backend/routers/api/m1/authentication/: endpoint.py
backend/routers/api/m1/server/: endpoint.py
backend/routers/api/m1/user/: endpoint.py
backend/routers/api/v1/: __init__.py
backend/routers/api/v1/apps/: endpoint.py
backend/routers/api/v2/: __init__.py
backend/routers/nodeinfo/: router.py
backend/routers/oauth/: router.py
backend/routers/public/: router.py
backend/routers/public/asset/: __init__.py
backend/routers/setup/: router.py
backend/routers/wellknown/: router.py
backend/routers/wellknown/nodeinfo/: endpoint.py
backend/routers/wellknown/webfinger/: endpoint.py
backend/tests/: test_main.py
backend/utils/: db.py  init.py  logger.py  security.py  tools.py
backend/utils/model/: api_schemas.py  audit_model.py  instance.py  nodeinfo.py  orm.py
backend/utils/system/: encryption.py  security.py
(+71 files in other folders)
