[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
pandas = "^2.2.2"
sqlalchemy = "^2.0.29"
python-gitlab = "^4.4.0"
ldap3 = "^2.9.1"
webauthn = "^2.1.0"
pyjwt = "^2.8.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
colorlog = "^6.8.2"
celery = "^5.3.6"
supervisor = "^4.2.5"
redis = "^5.0.3"
flower = "^2.0.1"
cryptography = "^42.0.5"
psutil = "^5.9.8"
netifaces = "^0.11.0"
asyncpg = "^0.29.0"
aiofiles = "^23.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
