[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
python-gitlab = "^4.4.0"
ldap3 = "^2.9.1"
webauthn = "^2.1.0"
pyjwt = "^2.8.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
colorlog = "^6.8.2"
celery = "5.4.0"
supervisor = "^4.2.5"
redis = "^5.0.3"
flower = "^2.0.1"
cryptography = "^42.0.5"
psutil = "^6.0.0"
netifaces = "^0.11.0"
asyncpg = "^0.29.0"
aiofiles = "^24.1.0"
greenlet = "^3.0.3"
idna = "^3.7"
rich = "^13.7.1"
pillow = "^10.3.0"
poetry = "^1.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
poetry-plugin-export = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
